// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<img
  aria-hidden="true"
  class="Image mix"
  loading="lazy"
  src="url"
/>
`;

exports[`Image client environment должен вернуть полный шаблон компонента с пустым изображением 1`] = `
<img
  aria-hidden="true"
  class="Image mix"
  loading="lazy"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAAUEBAAAACwAAAAAAQABAAACAkQBADs="
/>
`;

exports[`Image client environment должен вернуть полный шаблон компонента со стабов (snapshot) 1`] = `
<div
  class="Image-Container mix"
>
  <img
    aria-hidden="true"
    class="Image"
    loading="lazy"
    src="url"
  />
</div>
`;

exports[`Image server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<img
  aria-hidden="true"
  class="Image mix"
  loading="lazy"
  src="url"
/>
`;
